--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,14 @@ body {
 main {
   margin: 75px 10% 0 10%;
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 0;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
