Add styling to Comment component

--- a/src/Comment/index.css
+++ b/src/Comment/index.css
@@ -1,3 +1,11 @@
 .Comment {
   margin-bottom: 50px;
 }
+
+.Comment__creator, .Comment__post-title {
+  font-weight: bold;
+}
+
+.Comment__creator:hover, .Comment__post-title:hover, .Comment__creator:focus, .Comment__post-title:focus {
+  text-decoration: underline;
+}
